feat: add botão de fechar menu

--- a/src/reset/style.scss
+++ b/src/reset/style.scss
@@ -33,6 +33,7 @@ footer, header, hgroup, menu, nav, section {
 body {
   font-family: 'Open Sans', sans-serif;
   line-height: 1;
+  color: #333;
 }
 ol, ul {
 	list-style: none;
