--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -1,12 +1,21 @@
 .menu {
   background-color: #eee;
   box-shadow: 1px 0px 13px 0px rgba(0,0,0,0.75);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
   left: 0;
   padding: 20px 0 0 50px;
   position: absolute;
   top: 0;
   width: 15vw;
+  transition: left .3s ease;
+
+  &.is-actived {
+    left: 0;
+  }
 
   &__item {
     margin-bottom: 12px;
@@ -16,5 +25,19 @@
     font-size: 1.125em;
     font-weight: 400;
     text-decoration: none;
+  }
+}
+
+.close-button {
+  border: none;
+  color: #333;
+  cursor: pointer;
+  padding: 0;
+  width: 28px;
+  margin-bottom: 24px;
+  transition: transform .3s ease;
+
+  &:hover {
+    transform: rotate(90deg);
   }
 }
