--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -11,10 +11,11 @@
   position: absolute;
   top: 0;
   width: 15vw;
-  transition: left .3s ease;
+  transform: translate(-100%);
+  transition: transform .3s ease;
 
   &.is-actived {
-    left: 0;
+    transform: translate(0);
   }
 
   &__item {
