--- a/src/components/Layout/style.scss
+++ b/src/components/Layout/style.scss
@@ -3,3 +3,25 @@
   width: 100vw;
   height: 100vh;
 }
+
+.content {
+  padding-left: 15vw;
+  width: 100%;
+  height: 100%;
+  transition: padding-left .3s ease;
+
+  &.is-expanded {
+    padding-left: 0;
+  }
+}
+
+.menu-icon {
+  background-color: transparent;
+  border: none;
+  bottom: 25px;
+  color: #333;
+  cursor: pointer;
+  left: 50px;
+  padding: 0;
+  position: fixed;
+}
