--- a/src/reset/style.scss
+++ b/src/reset/style.scss
@@ -31,9 +31,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+  background-color: #eee;
+  color: #333;
   font-family: 'Open Sans', sans-serif;
   line-height: 1;
-  color: #333;
 }
 ol, ul {
 	list-style: none;
