fix: fixação de menu ao scrollar

--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -8,7 +8,7 @@
   height: 100vh;
   left: 0;
   padding: 20px 0 0 50px;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 15vw;
   transform: translate(-100%);
