--- a/src/components/PostItem/style.scss
+++ b/src/components/PostItem/style.scss
@@ -7,6 +7,18 @@
     background-color: #aeaeae;
     margin: 0 auto;
   }
+
+  &:hover {
+    .post-item {
+      &__title {
+        &::before {
+          width: 100%;
+        }
+      }
+    }
+    
+  }
+
   &__date {
     font-size: 0.875em;
     font-weight: 100;
@@ -33,7 +45,7 @@
     &::before {
       content: '';
       display: block;
-      width: 100%;
+      width: 0;
       position: absolute;
       bottom: 1%;
       height: 8%;
