:bug: Remoção de scroll vertical em blog

--- a/src/components/PostItem/style.scss
+++ b/src/components/PostItem/style.scss
@@ -26,6 +26,7 @@
 
   &__link {
     align-items: center;
+    box-sizing: border-box;
     color: inherit;
     display: flex;
     flex-direction: column;
