--- a/src/components/PostItem/style.scss
+++ b/src/components/PostItem/style.scss
@@ -22,6 +22,10 @@
   &__date {
     font-size: 0.875em;
     font-weight: 100;
+
+    @media (max-width: 920px) {
+      font-size: 0.75em;
+    }
   }
 
   &__link {
@@ -43,6 +47,10 @@
     position: relative;
     z-index: 1;
 
+    @media (max-width: 920px) {
+      font-size: 1.3em;
+    }
+
     &::before {
       content: '';
       display: block;
@@ -61,10 +69,19 @@
   &__category {
     font-size: 1.25em;
     margin-bottom: 24px;
+
+    @media (max-width: 920px) {
+      font-size: 1em;
+    }
   }
 
   &__description {
     margin-bottom: 12px;
     width: 70%;
+
+    @media (max-width: 920px) {
+      margin-bottom: 0;
+      font-size: 0.875em;
+    }
   }
 }
