--- a/src/components/PostItem/style.scss
+++ b/src/components/PostItem/style.scss
@@ -1,4 +1,14 @@
 .post-item {
+  align-items: center;
+  box-sizing: border-box;
+  color: inherit;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+
   &::after {
     content: '';
     display: block;
@@ -16,7 +26,6 @@
         }
       }
     }
-    
   }
 
   &__date {
@@ -29,15 +38,8 @@
   }
 
   &__link {
-    align-items: center;
-    box-sizing: border-box;
-    color: inherit;
-    display: flex;
-    flex-direction: column;
-    padding: 24px;
-    text-align: center;
     text-decoration: none;
-    width: 100%;
+    color: inherit;
   }
 
   &__title {
