:bug: remoção de scroll horizontal em posts

--- a/src/components/PostItem/style.scss
+++ b/src/components/PostItem/style.scss
@@ -4,7 +4,7 @@
   color: inherit;
   display: flex;
   flex-direction: column;
-  padding: 24px;
+  padding: 24px 0;
   text-align: center;
   text-decoration: none;
   width: 100%;
