--- a/src/components/Layout/style.scss
+++ b/src/components/Layout/style.scss
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   transition: padding-left .3s ease;
+  overflow-x: hidden;
 
   &.is-expanded {
     padding-left: 0;
